$Id: ChangeLog,v 1.105 2007-10-03 19:58:37 cmatsuoka Exp $

Stable versions
---------------

2.3.1 ()
	- fixed output filename setting in wav output
	- fixed size field setting in wav driver
	- fixed configure option --sysconfdir (reported by Douglas Carmichael)

2.3.0 (20071002)
	- added runtime endianism detection
	- added extractor for Epic Games' Unreal UMX files
	- added workaround for S3M "Return of Litmus" 0x87 quirk (reported
	  by Ralf Hoffmann)
	- added DigiBooster Pro module loader
	- added Fmod OXM depacker (depends on oggdec)
	- enabled Tracker Packer 3 prowizard loader
	- enabled The Player 4.x prowizard loader
	- removed reverse-endian sample reading options and XMP_CTL_BIGEND
	- fixed semantics of big/little endian options, moved to file driver
	- fixed memory corruption in Quadra Composer module loader
	- fixed Quadra Composer vibrato, offset and jump effects
	- fixed endianism problem in KSM and Zen Packer loaders
	- fixed transposition of Digital Tracker module notes
	- fixed build for QNX Neutrino 6.3.2
	- fixed OSS sequencer driver timing (reported by Reynir Stefansson)
	- fixed BMP/Audacious plugin to build also as XMMS plugin
	- fixed Impulse Tracker identification in S3M loader
	- fixed Module Protector test to recognize mods from "Made In Croatia"
	- fixed crash when scanning modules with length zero (bug #1800766)
	- fixed driver detection in NetBSD (don't try to build OSS driver)
	- fixed crash when restart value is invalid (reported by Ralf Hoffmann)
	- fixed handling of S3M pattern 0xfe (reported by Ralf Hoffmann)
	- fixed data size in MMD3 pattern sequence loading
	- fixed MMD1/MMD3 invalid/unhandled effect translation
	- fixed MMD1/MMD3 mixing buffer size setting (for PrivInv.med)
	- fixed Soundtracker 15-instrument module tracker fingerprinting
	- format management code cleanup
	- prowizard code cleanup

2.2.1 (20070917)
	- added IT tracker fingerprinting
	- enabled track volumes (fixes znm-believe.it, reported by Jon Rafkind)